--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.PasswordManager"
         tools:targetApi="31">
         <activity
+            android:name=".UpdatePage"
+            android:exported="false" />
+        <activity
+            android:name=".DeletePage"
+            android:exported="false" />
+        <activity
             android:name=".AddPage"
             android:exported="false" />
         <activity
